--- a/index.html
+++ b/index.html
@@ -71,6 +71,43 @@
 
 <img src="//cdn.shopify.com/s/files/1/1035/5187/t/5/assets/slide1.jpg?12738032654134160651" alt="" class="ui fluid image">
 
+<div class="footer-background">
+  <div class="ui three column grid container">
+    <div class="column">
+      NAVIGATION
+      <hr/>
+      <div class="ui ist">
+        <div class="item">About</div>
+        <div class="item">Videos</div>
+        <div class="item">Store Location</div>
+      </div>
+    </div>
+
+    <div class="column">
+      MAIN MENU
+      <hr/>
+      <div class="ui ist">
+        <div class="item">Men</div>
+        <div class="item">Women</div>
+        <div class="item">Kids</div>
+      </div>
+    </div>
+
+    <div class="column">
+      CONNECT
+      <hr/>
+      <div class="ui ist">
+        <div class="item">Sign up for the latest updates</div>
+        <div class="ui labeled input">
+          <input type="text" placeholder="Enter Email Address">
+          <div class="ui black label">
+            Join
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <script>
   $('.ui.dropdown')
       .dropdown()
